<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="4">



    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_element_height"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_vertical"
        android:text="@string/file_name" />
    <TextView
        android:id="@+id/file_name_value"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_element_height"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_vertical"
        android:text="TextView" />

    <TextView
        android:id="@+id/file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_size" />

    <TextView
        android:id="@+id/file_size_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/file_expiration_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_expiration_time" />

    <TextView
        android:id="@+id/file_expiration_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/file_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_permission" />

    <TextView
        android:id="@+id/file_permission_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />
</GridLayout>