<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_element_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/file_name" />
        <TextView
            android:id="@+id/file_name_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.5"
            android:textSize="18sp"
            android:text="TextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_element_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/file_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/file_size" />

        <TextView
            android:id="@+id/file_size_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_element_height"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/file_expiration_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/file_expiration_time" />

    <TextView
        android:id="@+id/file_expiration_time_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="TextView" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_element_height"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/file_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/file_permission" />

    <TextView
        android:id="@+id/file_permission_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="TextView" />
        </LinearLayout>
</LinearLayout>